--- a/views/product_view.hbs
+++ b/views/product_view.hbs
@@ -6,15 +6,15 @@
 </head>
 <body>
   <div class="container">
-    <h2>Product List</h2>
-		<button class="btn btn-success" data-toggle="modal" data-target="#myModalAdd">Add New</button>
+    <h2>製品リスト</h2>
+		<button class="btn btn-success" data-toggle="modal" data-target="#myModalAdd">製品追加</button>
     <table class="table table-striped" id="mytable">
       <thead>
         <tr>
           {{!-- <th>Product ID</th> --}}
-          <th>Product Name</th>
-          <th>Price</th>
-          <th>Action</th>
+          <th>製品リスト</th>
+          <th>値段</th>
+          <th>操作</th>
         </tr>
       </thead>
       <tbody>
@@ -24,8 +24,8 @@
           <td>{{ product_name }}</td>
           <td>{{ product_price }}</td>
           <td>
-            <a href="javascript:void(0);" class="btn btn-sm btn-info edit" data-id="{{ product_id }}" data-product_name="{{ product_name }}" data-product_price="{{ product_price }}">Edit</a>
-            <a href="javascript:void(0);" class="btn btn-sm btn-danger delete" data-id="{{ product_id }}">Delete</a>
+            <a href="javascript:void(0);" class="btn btn-sm btn-info edit" data-id="{{ product_id }}" data-product_name="{{ product_name }}" data-product_price="{{ product_price }}">変更</a>
+            <a href="javascript:void(0);" class="btn btn-sm btn-danger delete" data-id="{{ product_id }}">削除</a>
           </td>
         </tr>
         {{/each}}
@@ -39,23 +39,23 @@
          <div class="modal-dialog" role="document">
            <div class="modal-content">
              <div class="modal-header">
-               <h5 class="modal-title" id="exampleModalLabel">Add New Product</h5>
+               <h5 class="modal-title" id="exampleModalLabel">製品追加</h5>
                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                  <span aria-hidden="true">&times;</span>
                </button>
              </div>
              <div class="modal-body">
                <div class="form-group">
-                   <input type="text" name="product_name" class="form-control" placeholder="Product Name" required>
+                   <input type="text" name="product_name" class="form-control" placeholder="製品名" required>
                </div>
 
                <div class="form-group">
-                   <input type="text" name="product_price" class="form-control" placeholder="Price" required>
+                   <input type="text" name="product_price" class="form-control" placeholder="値段" required>
                </div>
              </div>
              <div class="modal-footer">
-               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-               <button type="submit" class="btn btn-primary">Save</button>
+               <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+               <button type="submit" class="btn btn-primary">保存</button>
              </div>
            </div>
          </div>
@@ -68,14 +68,14 @@
         <div class="modal-dialog" role="document">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Edit Product</h5>
+              <h5 class="modal-title" id="exampleModalLabel">製品更新</h5>
               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
               </button>
             </div>
             <div class="modal-body">
               <div class="form-group">
-                  <input type="text" name="product_name" class="form-control product_name" placeholder="Product Name" required>
+                  <input type="text" name="product_name" class="form-control product_name" placeholder="製品名" required>
               </div>
 
               <div class="form-group">
@@ -84,8 +84,8 @@
             </div>
             <div class="modal-footer">
               <input type="hidden" name="id" class="product_id">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-              <button type="submit" class="btn btn-primary">Update</button>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">閉じる</button>
+              <button type="submit" class="btn btn-primary">更新</button>
             </div>
           </div>
         </div>
@@ -98,7 +98,7 @@
  	        <div class="modal-dialog">
  	           <div class="modal-content">
  	               <div class="modal-header">
-									 	<h5 class="modal-title" id="myModalLabel">Delete Product</h5>
+									 	<h5 class="modal-title" id="myModalLabel">製品削除</h5>
  	                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
  	               </div>
  	               <div class="modal-body">
@@ -106,8 +106,8 @@
  	               </div>
  	               <div class="modal-footer">
 									 		<input type="hidden" name="product_id" class="form-control product_id2" required>
- 	                   	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
- 	                  	<button type="submit" class="btn btn-success">Delete</button>
+ 	                   	<button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+ 	                  	<button type="submit" class="btn btn-success">削除</button>
  	               </div>
  	      			</div>
  	        </div>
